--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="board" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: FLORALWHITE;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.GameController">
@@ -21,7 +21,7 @@
                   <Font name="FreeSans" size="24.0" />
                </font>
             </Label>
-            <Label fx:id="stepCounter" alignment="CENTER" contentDisplay="CENTER" layoutX="115.0" layoutY="438.0" prefHeight="28.0" prefWidth="78.0" text="00000" textAlignment="CENTER" wrapText="true">
+            <Label fx:id="stepCounter" alignment="CENTER" contentDisplay="CENTER" layoutX="115.0" layoutY="438.0" prefHeight="28.0" prefWidth="78.0" text="0" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="FreeSans Bold" size="25.0" />
                </font>
@@ -42,7 +42,7 @@
             </TextField>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="resultScreen" layoutX="40.0" layoutY="51.0" prefHeight="600.0" prefWidth="920.0">
+      <AnchorPane fx:id="resultScreen" layoutX="40.0" layoutY="51.0" prefHeight="600.0" prefWidth="920.0" style="-fx-background-color: ANTIQUEWHITE;" visible="false">
          <children>
             <AnchorPane prefHeight="600.0" prefWidth="275.0" style="-fx-background-color: slategray;" />
             <Label layoutX="401.0" layoutY="14.0" text="Your score">
@@ -55,7 +55,17 @@
                   <Font name="FreeSans" size="25.0" />
                </font>
             </Label>
-            <VBox layoutX="285.0" layoutY="161.0" prefHeight="400.0" prefWidth="350.0" />
+            <ListView fx:id="listView" layoutX="161.0" layoutY="158.0" opacity="0.8" prefHeight="335.0" prefWidth="600.0" style="-fx-background-color: ATIQUEWHITE;" />
+            <Button layoutX="370.0" layoutY="502.0" mnemonicParsing="false" onMouseClicked="#resetBoard" style="-fx-background-color: LIGHTSLATEGREY;" text="Restart" textAlignment="CENTER">
+               <font>
+                  <Font name="FreeSans Bold" size="37.0" />
+               </font>
+            </Button>
+            <Label fx:id="yourScore" layoutX="430.0" layoutY="69.0">
+               <font>
+                  <Font name="FreeSans" size="25.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
 
